@@ -4,13 +4,12 @@ import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 
-public class MultiThreadsContext<T extends Forkable<T>> implements ExecutionContext<T> {
+class MultiThreadsContext<T extends Forkable<T>> implements ExecutionContext<T> {
 	protected final ContextualizedExecutor<T> exec;
 	private final T globalContext;
 	
-	public MultiThreadsContext(T context, ContextualizedExecutor<T> exec) {
+	MultiThreadsContext(T context, ContextualizedExecutor<T> exec) {
 		this.exec = exec;
 		this.globalContext = context;
 	}
@@ -26,7 +25,7 @@ public class MultiThreadsContext<T extends Forkable<T>> implements ExecutionCont
 	
 	@Override
 	public void execute(Collection<Runnable> tasks) {
-		Collection<Callable<Void>> callables = tasks.stream().map(this::toCallable).collect(Collectors.toList());
+		Collection<Callable<Void>> callables = tasks.stream().map(this::toCallable).toList();
 		try {
 			final List<Future<Void>> futures = exec.invokeAll(callables, globalContext);
 			exec.checkExceptions(futures);
